# vyatta-syslog

./: .gitignore  Makefile.am  README.md  configure.ac
cmd/syslog_events/: main.go
debian/: changelog  control  copyright  golang-syslog.install  rsyslog@.service  rules  vyatta-op-delete-syslog-file-v1-yang.install  vyatta-op-generate-syslog-v1-yang.install  vyatta-op-show-syslog-v1-yang.install  vyatta-op-syslog-event-scripts-v1-yang.install  vyatta-syslog-snmptrap.conf  vyatta-syslog.dirs  vyatta-syslog.displace  vyatta-syslog.hide  vyatta-syslog.install  vyatta-syslog.tmpfile  vyatta-syslog.transform  vyatta-system-syslog-enhanced-routing-instance-v1-yang.install  vyatta-system-syslog-enhanced-v1-yang.install  vyatta-system-syslog-routing-instance-v1-yang.install  vyatta-system-syslog-v1-yang.install  vyatta-system.tmpfile
etc/: rsyslog.conf.vyatta
lib/Vyatta/: Syslog.pm
preconfig.d/: 5000-event-script-permissions
scripts/netplug/deladdr.d/: rsyslogd
scripts/netplug/linkdown.d/: rsyslogd
scripts/netplug/linkup.d/: rsyslogd
scripts/netplug/newaddr.d/: rsyslogd
scripts/system/: vyatta_syslog_event_scripts  vyatta_syslog_gencerts  vyatta_update_logrotate.pl  vyatta_update_syslog.pl
tests/: Makefile.am  syslog_rnd_gen  test_syslog.pl
tests/mock/Vyatta/: Configd.pm
tmplscripts/system/syslog/: configd_end.sh
usr/share/rsyslog-configs/: vyatta-action.template
yang/: vyatta-op-syslog-event-scripts-v1.yang  vyatta-system-syslog-enhanced-routing-instance-v1.yang  vyatta-system-syslog-enhanced-v1.yang  vyatta-system-syslog-v1.yang
(+34 files in other folders)
